# poker-eval-rs

./: Cargo.toml  Readme.md  build.rs  data.txt  data2.txt  demo_all_variants.sh  pyproject.toml
.github/workflows/: rust.yml
benches/: alloc_bench.rs  cfr_bench.rs  gpu_bench.rs  gpu_rvr_bench.rs  poker_bench.rs  solver_core_multiway.rs  solver_core_traversal_cache_bench.rs
docs/implementation/: SOLVER_CONVERGENCE_BATCH.md  SOLVER_CONVERGENCE_RUNNER.md  SOLVER_ROADMAP.md  SOLVER_TRAVERSAL_CACHE_BENCH.md
docs/reports/: solver_batch_agg_final.csv  solver_batch_runs_final.csv  solver_final_report.md  solver_traversal_cache_report_final.md  solver_traversal_cache_runs_final.csv
examples/: benchmark_variants.rs  card_mask.py  cfr_convergence_report.rs  cfr_gpu_resident_loop.rs  debug_holdem8.rs  eval.py  gpu_streaming_100m.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_eval_n.rs  fuzz_string_to_mask.rs
scripts/: plot_solver_batch.py  run_solver_long_campaigns.py
src/: board.rs  combinaison.rs  combinations.rs  deck.rs  deck_joker.rs  deck_std.rs  do_bottom_five_cards_table.rs  enumdefs.rs  enumerate.rs  enumord.rs  errors.rs  eval.rs  eval_joker.rs  eval_joker_low.rs  eval_joker_low8.rs  eval_low.rs  eval_low27.rs  eval_low8.rs  eval_omaha.rs  handval.rs  handval_low.rs  lib.rs  lowball.rs  main.rs  python_bindings.rs  range.rs  rule_std.rs  rules_joker.rs  rules_std.rs  t_botcard.rs  t_botfivecards.rs  t_botfivecards_old.rs  t_cardmasks.rs  t_jokercardmasks.rs  t_nbits.rs  t_straight.rs  t_topcard.rs  t_topfivecards.rs  wasm_bindings.rs
src/deck/: joker.rs  manila.rs  mod.rs  short_deck.rs  std_deck.rs  traits.rs  universal.rs
src/enumerate/: card_enum.rs  card_enum_dead.rs  evaluation.rs  game_params.rs  inner_loops.rs  mod.rs  montecarlo.rs  qmc.rs  result.rs
src/evaluators/: badugi.rs  holdem.rs  joker.rs  joker_low.rs  joker_low8.rs  lowball.rs  lowball27.rs  lowball8.rs  lowball_variants.rs  mod.rs  ofc.rs  omaha.rs  range_equity.rs
src/gpu/: eval.wgsl  evaluator.rs  mod.rs
src/rules/: combinations.rs  joker.rs  mod.rs  std.rs
src/solvers/: adapters.rs  betting.rs  betting_tree.rs  cfr.rs  core.rs  games.rs  holdem_subgame.rs  metrics.rs  mod.rs  ofc_game.rs  stud_draw.rs  variant_tree.rs
src/tables/: mod.rs  rank_lookup.rs  t_botfivecards.rs  t_cardmasks.rs  t_jokercardmasks.rs  t_jokerstraight.rs  t_topcard.rs  t_topfivecards.rs
src/tournament/: icm.rs  mod.rs
tests/: cfr_functional.rs  cli_board_validation.rs  cross_validation.rs  edge_cases.rs  enumeration_evaluation_phase1.rs  enumeration_supported_games_phase1.rs  integration_tests.rs  integration_variants.rs  mc_completeness.rs  ofc_tests.rs  parallelism_tests.rs  property_tests.proptest-regressions  property_tests.rs  python_tests.py  range_parser_tests.rs  regression_dataset.rs  regression_tests.rs  repro_audit.rs  short_deck_enumeration.rs  short_deck_tests.rs  tournament_icm.rs  universal_deck_tests.rs  variants_missing.rs  wasm_board_validation.rs
tests/data/: regression_eval_cases.json
tests/python/: test_poker_eval.py
