[package]
name = "poker-eval-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
rand = "0.8.3"

[lib]
name = "poker_eval_rs" 
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "poker_eval_rs_cli"  
path = "src/main.rs"

[profile.release]
debug = true
