[package]
name = "poker-eval-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
description = "A high-performance poker hand evaluation library."
repository = "https://github.com/jejellyroll-fr/poker-eval-rs"

[features]
default = ["parallel", "compact-table"]
parallel = ["dep:rayon"]
python = ["dep:pyo3"]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen"]
serde-wasm-bindgen = ["dep:serde-wasm-bindgen"]

# Backend options
compact-table = [] # Current 32KB cache-friendly table
large-table = []   # ~200KB+ high-throughput table (OMPEval style)
simd = []          # AVX2/SSE4.1 batch evaluation

[dependencies]
clap = { version = "4", features = ["derive"] }
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
rand = { version = "0.8.3", features = ["small_rng"] }
rayon = { version = "1.10", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[lib]
name = "poker_eval_rs"
# When building with python feature, include cdylib
# Otherwise, just rlib for pure Rust usage
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "poker_eval_rs_cli"
path = "src/main.rs"

[profile.release]
debug = true

[dev-dependencies]
criterion = "0.5"
proptest = "1.10.0"

[[bench]]
name = "poker_bench"
harness = false

[[bench]]
name = "alloc_bench"
harness = false
