[package]
name = "poker-eval-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
description = "A high-performance poker hand evaluation library."
repository = "https://github.com/jejellyroll-fr/poker-eval-rs"

[features]
default = ["parallel", "compact-table"]
parallel = ["dep:rayon"]
python = ["dep:pyo3"]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "compact-table"]
serde-wasm-bindgen = ["dep:serde-wasm-bindgen"]
gpu = ["dep:wgpu", "dep:bytemuck", "dep:pollster"]

# Backend options
compact-table = [] # Current ~200KB cache-friendly perfect-hash tables
large-table = []   # ~9.6MB sparse high-throughput table (OMPEval style)
simd = []          # AVX2/SSE4.1 batch evaluation

[dependencies]
clap = { version = "4", features = ["derive"] }
pyo3 = { version = "0.24.1", features = ["extension-module"], optional = true }
rand = { version = "0.8.3", features = ["small_rng"] }
rayon = { version = "1.10", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", optional = true }
wgpu = { version = "0.19", optional = true }
bytemuck = { version = "1.13", features = ["derive"], optional = true }
pollster = { version = "0.3", optional = true }
bincode = "1.3.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
name = "poker_eval_rs"
# When building with python feature, include cdylib
# Otherwise, just rlib for pure Rust usage
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "poker_eval_rs_cli"
path = "src/main.rs"

[profile.release]
debug = true

[dev-dependencies]
criterion = "0.5"
proptest = "1.10.0"

[[bench]]
name = "poker_bench"
harness = false

[[bench]]
name = "alloc_bench"
harness = false

[[bench]]
name = "gpu_bench"
harness = false
required-features = ["gpu"]

[[bench]]
name = "cfr_bench"
harness = false

[[bench]]
name = "gpu_rvr_bench"
harness = false
required-features = ["gpu"]

[[bench]]
name = "solver_core_multiway"
harness = false

[[bench]]
name = "solver_core_traversal_cache_bench"
harness = false

[[example]]
name = "cfr_gpu_resident_loop"
required-features = ["gpu"]

[[example]]
name = "gpu_streaming_100m"
required-features = ["gpu"]
