[package]
name = "poker-eval-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.poker-eval-rs]
path = ".."

[[bin]]
name = "fuzz_string_to_mask"
path = "fuzz_targets/fuzz_string_to_mask.rs"
test = false
doc = false

[[bin]]
name = "fuzz_eval_n"
path = "fuzz_targets/fuzz_eval_n.rs"
test = false
doc = false
